- fixed bug where weapon damage bonuses weren't being saved - balancing - fixed continue not being disabled when watching picturestory - added dialogue etc - animations another pass

--- a/Godot/Data/Characters/Story/peasant.json
+++ b/Godot/Data/Characters/Story/peasant.json
@@ -20,6 +20,19 @@
         "res://Assets/Audio/Effects/PlaceholderSFX/MeleePunch2.wav"
     ],
     "Perks": [],
+    "Barks": {
+        "0": [
+            [
+                "Ishtar, guide our blades against tyranny!"
+            ],
+            [
+                "Shamash, aid us in this righteous battle!"
+            ],
+            [
+                "Ishtar, protect us!"
+            ]
+        ]
+    },
     "Level": 1,
     "Might": 4,
     "Resilience": 4,
