--- a/Godot/Data/Characters/Story/peasant.json
+++ b/Godot/Data/Characters/Story/peasant.json
@@ -1,5 +1,5 @@
 {
-    "Name": "Peasant",
+    "Name": "Citizen",
     "Description": "Ereshkigal, the goddess of the underworld, holds dominion over the realm of the dead and represents the cycle of life and death.",
     "PatronGod": "Ereshkigal",
     "BodyPath": "res://Source/Actors/CharacterUnit/Bodies/AmabBody1/AmabBody1.tscn",
